Change menu background color from blue to orange

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ nav ul li a:hover {
 .menu-con {
   display: none;
   position: absolute;
-  background: blue;
+  background: orange;
   top: 35px;
   left: 0;
 }
