--- a/style.css
+++ b/style.css
@@ -2,18 +2,18 @@
 body {
   font-family: Arial, sans-serif;
   margin: 0;
-  background: aliceblue;
+  background: orange;
 }
 
 header {
-  background: blue;
+  background: orange;
   color: white;
   text-align: center;
   padding: 10px;
 }
 
 nav ul {
-  background: dodgerblue;
+  background: orange;
   padding: 0;
   margin: 0;
   display: flex;
@@ -31,7 +31,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-  background: dodgerblue;
+  background: orange;
 }
 .menu-con {
   display: none;
@@ -53,14 +53,14 @@ main {
   margin: 10px;
 }
 .card {
-  border: 1px solid whitesmoke;
-  background: aliceblue;
+  border: 1px solid aliceblue;
+  background: orange;
   padding: 10px;
   margin-bottom: 10px;
 }
 footer {
   text-align: center;
-  background: blue;
+  background: orange;
   color: white;
   padding: 10px;
   margin-top: 10px;
